# Digital_Twin-Gazebo

./: CMakeLists.txt  README.md  package.xml
config/: maya_assembly.yaml
launch/: display.launch  gazebo.launch
meshes/: w1.STL  w2.STL  w3.STL
scripts/: digital_twin.py  teleop.py
urdf/: MAYA_BASE.urdf  main.xacro  plugins.gazebo  rim.xacro
